@@ -2,6 +2,7 @@
 - refine/two fortran binding uses a single partition
 - mid plane of twod grids in now a varaible (for pointwise)
 - ref_export learned to extract twod grid to meshb format
+- ref_translate learned --scale
 
 Tue, Feb  3, 2015 : Released Refine 1.8.15
 
